# voxicus

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: input.rs  main.rs
src/cam/: cam_move.rs  mod.rs
src/input/: mod.rs
src/voxel/: mod.rs
