[package]
name = "voxicus"
version = "0.1.0"
description = "A fully scriptable voxel game"
authors = ["CJ Burkey<bulletlang@gmail.com>"]
readme = "README.md"
license = "MIT"
publish = false
edition = "2018"

# Choose Metal for Mac and Vulkan for Windows/Linux
[features]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[dependencies]
amethyst = "0.15.3"
