[package]
name = "voxicus"
version = "0.1.0"
description = "A fully scriptable voxel game"
authors = ["CJ Burkey<bulletlang@gmail.com>"]
readme = "README.md"
license = "MIT"
publish = false
edition = "2018"

# Choose Metal for Mac and Vulkan for Windows/Linux
[features]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
no-slow-safety-checks = ["amethyst/no-slow-safety-checks"]

[dependencies]
serde = "1.0.126"

# Until changes in https://github.com/amethyst/legion/pull/186 becomes
# available via amethyst directly
[dependencies.legion]
version = "0.4.0"
features = ["serialize", "crossbeam-events", "codegen"]

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
rev = "6d0e7aaf58a4d1483b902f63920044eabb865c92"
